# opendismissal

./: .dockerignore  .env.example  .gitignore  .snyk  BACKEND_FOUNDATION_COMPLETE.md  CLAUDE.md  CONTAINER_REGISTRY_SETUP.md  CORE_VIEWS_IMPLEMENTATION.md  DOCKER.md  Dockerfile  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  build-and-push.sh  build.sh  deploy-k8s.sh  docker-compose.prod.yml  docker-compose.yml  feedback.md  investigate_admin_cache_issue.py  k8s-deployment.yaml  k8s-secrets-template.yaml  manage.py  nginx.conf  pyproject.toml  realtime_demo.html  sonar-project.properties  sw.js  test_admin_cache.py
.sonarlint/: connectedMode.json
chart/: Chart.yaml  values.yaml
dissmissal/: admin.py  api.py  apps.py  constants.py  consumers.py  csp_views.py  forms.py  models.py  routing.py  tests.py  urls.py  utils.py  views.py
docs/: django-health-check.md  realtime-sync-implementation.md
github/: copilot-instructions.md
k8s/: CLAUDE.md  DEPLOYMENT-RUNBOOK.md  RESTRUCTURE-SUMMARY.md  cert-manager-issuers.yaml  deploy.sh  django-configmap.yaml  django-deployment.yaml  django-service.yaml  external-dns-deployment.yaml  generate-demo-data-job.yaml  generate-secrets.sh  k8s-manifest-deployment-order.txt  migration-job.yaml  namespace.yaml  postgresql-service.yaml  postgresql-statefulset.yaml  redis-deployment.yaml  redis-service.yaml
opendiss/: asgi.py  middleware.py  settings.py  test_settings.py  urls.py  wsgi.py
plans/: CLAUDE.md  admin-interface-cache-issue-analysis.md  bootstrap-styling-fix-report-2025-01-07.md  complexity_refactoring_report.md  database-config-fix.md  dev1-backend-foundation.md  dev2-core-views.md  dev3-frontend-templates.md  dismissal-codes-editable-system-blake-anderson-review-jordan-whitfield.md  dismissal-codes-editable-system-blake-anderson-v2.md  dismissal-codes-editable-system-blake-anderson.md  (+35 more)
(+102 files in other folders)
