[project]
name = "opendismissal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bandit>=1.8.6",
    "daphne>=4.2.1",
    "dj-database-url>=3.0.1",
    "django>=5.2.4",
    "django-csp>=3.7",
    "django-allauth[saml,socialaccount]>=65.10.0",
    "django-channels>=0.7.0",
    "django-health-check>=3.20.0",
    "django-ratelimit>=4.1.0",
    "django-redis>=6.0.0",
    "django-storages[s3]>=1.14.6",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.2.9",
    "python-decouple>=3.8",
    "redis>=5.0.0",
    "safety>=3.7.0",
    "whitenoise>=6.7.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "playwright>=1.54.0",
    "pysonar>=1.1.0.2035",
    "pytest-playwright>=0.7.0",
    "ruff>=0.12.7",
]


[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true


[tool.sonar]
projectKey="hatchertechnology_opendismissal"
projectName="OpenDismissal"
exclusions='**/tests/*test*.py,**/**/commands/generate_demo_data.py'
